--- a/Atomic Team 3/Atomic Team 3/View/Base.lproj/Main.storyboard
+++ b/Atomic Team 3/Atomic Team 3/View/Base.lproj/Main.storyboard
@@ -126,6 +126,101 @@
             </objects>
             <point key="canvasLocation" x="824.61538461538464" y="1065.6398104265402"/>
         </scene>
+        <!--Congrast View Controller-->
+        <scene sceneID="pBf-rL-YII">
+            <objects>
+                <viewController storyboardIdentifier="CongrastViewController" id="MQm-kE-nag" customClass="CongrastViewController" customModule="Atomic_Team_3" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="i2Y-v4-DTV">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yOs-It-07D">
+                                <rect key="frame" x="0.0" y="88" width="390" height="756"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fvB-t8-kvS">
+                                        <rect key="frame" x="20" y="16" width="350" height="668"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="congrast" translatesAutoresizingMaskIntoConstraints="NO" id="4Om-MR-pe6">
+                                                <rect key="frame" x="24" y="45" width="302" height="287"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Awesome! You have finished your goal!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jfG-lj-Trf">
+                                                <rect key="frame" x="24" y="356" width="302" height="65"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="23"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lXx-Dp-pTQ">
+                                                <rect key="frame" x="24" y="516" width="302" height="50"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <color key="tintColor" name="main_orange"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="filled" image="house" catalog="system" title="Back to home" imagePadding="4">
+                                                    <fontDescription key="titleFontDescription" type="system" pointSize="16"/>
+                                                    <color key="baseForegroundColor" name="secondary_orange"/>
+                                                    <color key="baseBackgroundColor" name="main_orange"/>
+                                                </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="btnBackHomeClicked:" destination="MQm-kE-nag" eventType="touchUpInside" id="Y63-YF-AVv"/>
+                                                    <action selector="playPressed:" destination="gPj-TI-Zxe" eventType="touchUpInside" id="RQJ-iu-IlK"/>
+                                                    <action selector="updateMyProgressPressed:" destination="JnT-xI-3BM" eventType="touchUpInside" id="bn4-la-KXZ"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EjL-OE-i2a">
+                                                <rect key="frame" x="24" y="574" width="302" height="50"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <color key="tintColor" name="secondary_orange"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="filled" image="plus" catalog="system" title="Set new goal" imagePadding="4">
+                                                    <fontDescription key="titleFontDescription" type="system" pointSize="16"/>
+                                                    <color key="baseForegroundColor" name="main_orange"/>
+                                                    <color key="baseBackgroundColor" name="secondary_orange"/>
+                                                </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="btnSetNewGoalClicked:" destination="MQm-kE-nag" eventType="touchUpInside" id="FPA-Px-JzJ"/>
+                                                    <action selector="cancelPressed:" destination="gPj-TI-Zxe" eventType="touchUpInside" id="a5i-Ph-96p"/>
+                                                    <action selector="finishReadingGoalPressed:" destination="JnT-xI-3BM" eventType="touchUpInside" id="6eU-FA-Epb"/>
+                                                </connections>
+                                            </button>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="You have accomplished your setted goals! What a dedication!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9y8-Mj-N7d">
+                                                <rect key="frame" x="24" y="429" width="302" height="47"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                <color key="textColor" systemColor="systemGrayColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" name="grey_bg"/>
+                            </view>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ApX-9F-KeQ">
+                                <rect key="frame" x="0.0" y="44" width="390" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <textAttributes key="titleTextAttributes">
+                                    <color key="textColor" systemColor="labelColor"/>
+                                </textAttributes>
+                                <items>
+                                    <navigationItem title="Congrast!" id="c7X-Rk-PzA"/>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="nfS-IU-10L"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <connections>
+                        <outlet property="cardView" destination="fvB-t8-kvS" id="IhN-9V-0Vs"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kHg-cr-Qly" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1613.8461538461538" y="1065.6398104265402"/>
+        </scene>
         <!--Unsetted Home View Controller-->
         <scene sceneID="roA-Ul-mdI">
             <objects>
@@ -1005,7 +1100,9 @@
         <image name="checkmark" catalog="system" width="128" height="114"/>
         <image name="checkmark.circle" catalog="system" width="128" height="121"/>
         <image name="chevron.backward" catalog="system" width="96" height="128"/>
+        <image name="congrast" width="286" height="280"/>
         <image name="empty_goal" width="258" height="263"/>
+        <image name="house" catalog="system" width="128" height="106"/>
         <image name="little_step" width="302" height="281"/>
         <image name="pause" catalog="system" width="88" height="128"/>
         <image name="pencil" catalog="system" width="128" height="113"/>
